{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 44,
  "lineage": "683d1d8b-248b-15fe-d77b-27b5a4f1a41f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1c0aceeadec9852",
            "association_id": "eipassoc-0043c051c52907ddd",
            "domain": "vpc",
            "id": "eipalloc-0b1c0aceeadec9852",
            "instance": "i-08758c64dd0178e60",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f56b56ac03ee49d9",
            "private_dns": "ip-10-0-101-14.ec2.internal",
            "private_ip": "10.0.101.14",
            "public_dns": "ec2-54-159-206-160.compute-1.amazonaws.com",
            "public_ip": "54.159.206.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:loadbalancer/app/SAP-stage-alb/fe1ba2c0286f7d1b",
            "arn_suffix": "app/SAP-stage-alb/fe1ba2c0286f7d1b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "SAP-stage-alb-1760694569.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:415578120655:loadbalancer/app/SAP-stage-alb/fe1ba2c0286f7d1b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "SAP-stage-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f67d293010709800"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07dd351cb8bb55398"
              },
              {
                "subnet_id": "subnet-0bc78706d2ec678f1"
              }
            ],
            "subnets": [
              "subnet-07dd351cb8bb55398",
              "subnet-0bc78706d2ec678f1"
            ],
            "tags": {
              "Name": "SAP-stage-alb"
            },
            "tags_all": {
              "Name": "SAP-stage-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0f92d0f960226ee17",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:listener/app/SAP-stage-alb/fe1ba2c0286f7d1b/41aef5116bcdcfab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:415578120655:listener/app/SAP-stage-alb/fe1ba2c0286f7d1b/41aef5116bcdcfab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:loadbalancer/app/SAP-stage-alb/fe1ba2c0286f7d1b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53",
            "arn_suffix": "targetgroup/app1-20220919000405323100000004/812853477c2d2f53",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-20220919000405323100000004",
            "name_prefix": "app1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app1-",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "app1-",
              "environment": "stage",
              "owners": "SAP"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lb.this",
            "module.ec2_private.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_app1_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53-20220919000406195700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53",
            "target_id": "i-0f368a6a86e823daf"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        },
        {
          "index_key": "0.my_app1_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53-20220919000406066900000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:415578120655:targetgroup/app1-20220919000405323100000004/812853477c2d2f53",
            "target_id": "i-016b963103a2f8099"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:security-group/sg-0018d907230c9bc71",
            "description": "SG for bastion host connections",
            "egress": [],
            "id": "sg-0018d907230c9bc71",
            "ingress": [],
            "name": "public-bastion-sg-20220919000124554500000001",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "415578120655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2579165430",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0018d907230c9bc71",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastionsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1156998670",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0018d907230c9bc71",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:415578120655:instance/i-0f368a6a86e823daf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f368a6a86e823daf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e90cbefb21b557f5",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4a5c5faefc8d514",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d338b8733f60c604",
            "tags": {
              "Name": "SAP-stage-PrivateHost-1",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-PrivateHost-1",
              "environment": "stage",
              "owners": "SAP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-stage-PrivateHost-1"
            },
            "vpc_security_group_ids": [
              "sg-017f20b1795671c1a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:415578120655:instance/i-016b963103a2f8099",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016b963103a2f8099",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074709245ed972d17",
            "private_dns": "ip-10-0-2-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d2129a021f5948e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0e1bf8b02f54a1f",
            "tags": {
              "Name": "SAP-stage-PrivateHost-2",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-PrivateHost-2",
              "environment": "stage",
              "owners": "SAP"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-stage-PrivateHost-2"
            },
            "vpc_security_group_ids": [
              "sg-017f20b1795671c1a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.aws_vpc_endpoint.dms",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.states",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.data.aws_vpc_endpoint_service.dms",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02538f8925e3aa27a",
            "arn": "arn:aws:ec2:us-east-1:415578120655:instance/i-08758c64dd0178e60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08758c64dd0178e60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f56b56ac03ee49d9",
            "private_dns": "ip-10-0-101-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.14",
            "public_dns": "ec2-54-237-247-45.compute-1.amazonaws.com",
            "public_ip": "54.237.247.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081c5876f61cf7f12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dd351cb8bb55398",
            "tags": {
              "Name": "SAP-stage-BastionHost",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-BastionHost",
              "environment": "stage",
              "owners": "SAP"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-stage-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0018d907230c9bc71"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.bastionsg.aws_security_group.this",
            "module.bastionsg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:security-group/sg-0f67d293010709800",
            "description": "SG for loadbalancer, HTTP",
            "egress": [],
            "id": "sg-0f67d293010709800",
            "ingress": [],
            "name": "loadbalancer-sg-20220919000124554600000002",
            "name_prefix": "loadbalancer-sg-",
            "owner_id": "415578120655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "loadbalancer-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3051575058",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f67d293010709800",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2942730389",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f67d293010709800",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "81 from internet",
            "from_port": 81,
            "id": "sgrule-1087373043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f67d293010709800",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.privatesg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:security-group/sg-017f20b1795671c1a",
            "description": "SG for private subnet hosting EC2",
            "egress": [],
            "id": "sg-017f20b1795671c1a",
            "ingress": [],
            "name": "private-sg-20220919000124583200000003",
            "name_prefix": "private-sg-",
            "owner_id": "415578120655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.privatesg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1919059014",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-017f20b1795671c1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.privatesg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3749196399",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017f20b1795671c1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1393619793",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017f20b1795671c1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.privatesg.aws_security_group.this",
            "module.privatesg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4569c1ee621d224",
            "domain": "vpc",
            "id": "eipalloc-0f4569c1ee621d224",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-219-253-244.compute-1.amazonaws.com",
            "public_ip": "3.219.253.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:internet-gateway/igw-0a7b1f766355ce7b3",
            "id": "igw-0a7b1f766355ce7b3",
            "owner_id": "415578120655",
            "tags": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4569c1ee621d224",
            "connectivity_type": "public",
            "id": "nat-0d1e565b0128354a3",
            "network_interface_id": "eni-0b848ac3adfda8921",
            "private_ip": "10.0.101.65",
            "public_ip": "3.219.253.244",
            "subnet_id": "subnet-07dd351cb8bb55398",
            "tags": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-us-east-1a",
              "environment": "stage",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082afcf5beca116b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d1e565b0128354a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082afcf5beca116b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a7b1f766355ce7b3",
            "id": "r-rtb-0118f8b4cbb72a5d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0118f8b4cbb72a5d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:route-table/rtb-0a13164d647e86890",
            "id": "rtb-0a13164d647e86890",
            "owner_id": "415578120655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-stage-myvpc-db",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-db",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:route-table/rtb-082afcf5beca116b1",
            "id": "rtb-082afcf5beca116b1",
            "owner_id": "415578120655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-stage-myvpc-private",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-private",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:route-table/rtb-0118f8b4cbb72a5d5",
            "id": "rtb-0118f8b4cbb72a5d5",
            "owner_id": "415578120655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-stage-myvpc-public",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-public",
              "environment": "stage",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d10103d33676aa1a",
            "route_table_id": "rtb-0a13164d647e86890",
            "subnet_id": "subnet-0e0659abe92892b52"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018f6b93651874e67",
            "route_table_id": "rtb-0a13164d647e86890",
            "subnet_id": "subnet-047b797dad440d117"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f54cfd49e0f0678",
            "route_table_id": "rtb-082afcf5beca116b1",
            "subnet_id": "subnet-0d338b8733f60c604"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fdd18e63f160f61",
            "route_table_id": "rtb-082afcf5beca116b1",
            "subnet_id": "subnet-0a0e1bf8b02f54a1f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e6442ce9f8d7b3c",
            "route_table_id": "rtb-0118f8b4cbb72a5d5",
            "subnet_id": "subnet-07dd351cb8bb55398"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2506bd136eb8621",
            "route_table_id": "rtb-0118f8b4cbb72a5d5",
            "subnet_id": "subnet-0bc78706d2ec678f1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-0e0659abe92892b52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0659abe92892b52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-047b797dad440d117",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047b797dad440d117",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-0d338b8733f60c604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d338b8733f60c604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-0a0e1bf8b02f54a1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e1bf8b02f54a1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-07dd351cb8bb55398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dd351cb8bb55398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:subnet/subnet-0bc78706d2ec678f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc78706d2ec678f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "415578120655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-stage-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stage",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0f92d0f960226ee17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415578120655:vpc/vpc-0f92d0f960226ee17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049054922d4e4fd08",
            "default_route_table_id": "rtb-0c250eb6506f0a36f",
            "default_security_group_id": "sg-0d06bb410a8b274e6",
            "dhcp_options_id": "dopt-058da62e252062abe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f92d0f960226ee17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c250eb6506f0a36f",
            "owner_id": "415578120655",
            "tags": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-stage-myvpc",
              "environment": "stage",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}